--- a/styles/main.css
+++ b/styles/main.css
@@ -7,3 +7,10 @@ body{
     max-width: 80%;
 }
 
+#firebaseui-auth-container{
+    position: absolute;
+    width: 30%;
+    height: 50%;
+    background-color: black;
+    visibility: hidden;
+}
